--- a/style.css
+++ b/style.css
@@ -40,6 +40,12 @@ ul{
 .content-block-one{
     border: 2px solid pink;
 }*/
+*{
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
+
+}
 
 body{
     border: 2px solid red;
@@ -52,19 +58,78 @@ body{
     border: 2px solid black;
     display: flex;
     flex-direction: column;
-    background-color: #1f2937;
+    background-color: #0b0f16;
+    
 }
 
 .header-logo{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding-top: 10px;
+    padding-left: 100px;
+    padding-right: 100px;  
+    
+    
+}
+
+.header p{
+    font-size: 24px;
+    font-family: Arial, Helvetica, sans-serif;
     color: white;
+    font-weight: bold;
 }
 
 ul{
     list-style-type: none;
     display: flex;
-    gap:10px;
+    gap:15px;
     padding: 0;
     margin: 0;
-}    
+    color: #F9FAF8;
+    font-size: 18px;
+}
+
+.websitegreat{
+    border: 2px solid blueviolet;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 100px;
+}
+
+.header-wording{
+    font-size: 48px;
+    font-weight: bolder;
+    color: #f9faf8;
+}
+
+.text{
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #e5e7eb;/*I like aquamarine here*/
+}
+
+button{
+    background-color: #3882f6;
+    color: white;
+    padding: 8px 24px;
+    border-radius: 5px;
+    border: none;
+    font-weight: bold;
+}
+
+.place-holder{
+    color: #e5e7eb;
+    padding: 100px 50px;
+    background-color: grey;
+    border: 2px solid pink;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+}
+
+.verbose-container{
+    border: 2px solid brown;
+    width: 50%;
+}
