--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body{
     border: 2px solid black;
     display: flex;
     flex-direction: column;
-    background-color: #0b0f16;
+    background-color: #1f2937;
     
 }
 
@@ -90,12 +90,16 @@ ul{
 }
 
 .websitegreat{
-    border: 2px solid blueviolet;
+    
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: center;
+    align-items: stretch;
     font-family: Arial, Helvetica, sans-serif;
     margin: 100px;
+    gap: 30px;
+    
+    align-content: stretch;
+    
 }
 
 .header-wording{
@@ -119,17 +123,23 @@ button{
     font-weight: bold;
 }
 
+    
 .place-holder{
     color: #e5e7eb;
-    padding: 100px 50px;
+    
     background-color: grey;
-    border: 2px solid pink;
-    width: 50%;
+    flex:1;
     display: flex;
     justify-content: center;
+   
+    align-items: center;
+    
+    
 }
 
 .verbose-container{
-    border: 2px solid brown;
-    width: 50%;
+    
+    flex:1;
+    background-color: #1f2937;
+    
 }
