--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ ul{
 }
 
 body{
-    border: 2px solid red;
+    /*border: 2px solid red;*/
     min-height:100vh;
     display: flex;
     flex-direction: column;
