--- a/style.css
+++ b/style.css
@@ -1,45 +1,3 @@
-/**{
-    margin:0;
-    padding: 0;
-    box-sizing: border-box;
-
-}
-
-body{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 100vh;
-    border:2px solid black;
-    
-    
-}
-
-.header{
-    border: 2px solid red;
-    display: flex;
-    flex-direction: column;
-    background-color: #1F2937; 
-    
-}
-
-.header-logo{
-    display: flex;
-    justify-content: space-around;
-    color: white;
-}
-
-ul{
-    list-style-type: none;
-    display: flex;
-    gap:10px;
-    padding: 0;
-    margin: 0;
-}
-
-.content-block-one{
-    border: 2px solid pink;
-}*/
 *{
     margin:0;
     padding: 0;
@@ -52,6 +10,7 @@ body{
     min-height:100vh;
     display: flex;
     flex-direction: column;
+    /*Initial Issue caused by using align-items which is required for the containers below the body which stretch out to take the full width*/
 }
 
 .header{
@@ -143,3 +102,74 @@ button{
     background-color: #1f2937;
     
 }
+
+/*1st Content Box*/
+.content-block-one{
+    display: flex;
+    flex-direction: column;
+    
+    
+}
+
+.random-information{
+    
+    display: flex;
+    justify-content: center;
+    font-size: 36px;
+    color: #1f2937;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
+
+    
+}
+
+.illustration-holder{
+    display: flex;
+   
+   
+    padding: 100px;
+    padding-top: 50px;
+    
+    
+
+}
+
+.boxes{
+    
+    display: flex;
+    
+    align-items: center;
+    flex-direction: column;
+    flex: 1; 
+    border: 2px solid black; 
+}
+
+.box{
+    height: 150px;
+    width: 150px;
+    border: 2px solid #3882f6;
+    border-radius: 8px;
+    flex: 1 1 auto;
+    
+}
+
+.boxes p{
+    
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 150px;
+    text-align: center;
+    border: 2px solid black;
+    
+    
+    
+}
+
+
+
+
+
+
+
+
